add put for /badges endpoint with api-spec update
